--- a/estilo/style.css
+++ b/estilo/style.css
@@ -60,7 +60,7 @@ header > p {
     padding-right: 10px;
     padding-left: 10px;
     text-shadow: 2px 2px 0px #000000ad;
-    margin-bottom: 5px;
+    padding-bottom: 50px;
 }
 
 nav {
